[package]
name = "cwd-pre-propose-single"
version = "0.2.0"
authors = ["ekez <zekemedley@gmail.com>"]
edition = "2021"
repository = "https://github.com/DA0-DA0/dao-contracts"
description = "A DAO DAO pre-propose module for cwd-proposal-single for native and cw20 deposits."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.3.0" }
cw2 = "0.13.2"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
cwd-pre-propose-base = { version = "*", path = "../../../../packages/cwd-pre-propose-base" }
neutron-sdk = { package = "neutron-sdk", git = "https://github.com/neutron-org/neutron-sdk.git", rev = "d5656d0a830b6a6604b2471e7c2e72863d9c60ba" }
schemars = "0.8.8"

[dev-dependencies]
cosmwasm-schema = "1.3.0"
cw-multi-test = "0.13.2"
cw-utils = "0.13.2"
cw4-group = "0.13.2"
cw20 = "0.13.2"
cw20-base = "0.13.2"
#cwd-voting-cw20-staked = { path = "../../voting/cwd-voting-cw20-staked" }
cwd-proposal-single = { path = "../../proposal/cwd-proposal-single" }
cwd-core = { path = "../../../dao/cwd-core" }
#cwd-voting-cw4 = { path = "../../voting/cwd-voting-cw4" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
cw-denom = { path = "../../../../packages/cw-denom" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
#cwd-testing = { path = "../../../../packages/cwd-testing" }
cwd-proposal-hooks = { path = "../../../../packages/cwd-proposal-hooks" }
