[package]
name = "cwd-pre-propose-single"
version = "0.2.2"
authors = ["ekez <zekemedley@gmail.com>"]
edition = "2021"
repository = "https://github.com/DA0-DA0/dao-contracts"
description = "A DAO DAO pre-propose module for cwd-proposal-single for native and cw20 deposits."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "2.0.4" }
cw2 = "2.0.0"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
cwd-pre-propose-base = { version = "*", path = "../../../../packages/cwd-pre-propose-base" }
neutron-sdk = "0.10.0"
schemars = "0.8.15"

[dev-dependencies]
cosmwasm-schema = "2.0.4"
cw-multi-test = "2.0.1"
cw-utils = { version = "2.0.0" }
cw4-group = "2.0.0"
cw20 = "2.0.0"
cw20-base = "2.0.0"
cwd-proposal-single = { path = "../../proposal/cwd-proposal-single" }
cwd-core = { path = "../../../dao/cwd-core" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
cw-denom = { path = "../../../../packages/cw-denom" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
cwd-proposal-hooks = { path = "../../../../packages/cwd-proposal-hooks" }
