[package]
name = "cwd-proposal-multiple"
version = "0.2.0"
authors = ["blue-note"]
edition = "2021"
repository = "https://github.com/DA0-DA0/dao-contracts"
description = "A DAO DAO proposal module for multiple choice (a or b or c or ...) voting."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
neutron-sdk = { package = "neutron-sdk", version = "0.6.1" }
cosmwasm-std = { version = "1.3.0", features = ["ibc3"] }
cosmwasm-storage = { version = "1.3.0" }
cw-storage-plus = "1.1.0"
cw-utils = { version = "1.0.1" }
cw2 = "1.1.0"
cw20 = "1.1.0"
cw3 = "1.1.0"
schemars = "0.8.8"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

cwd-core = { path = "../../cwd-core", features = ["library"] }
cwd-macros = { path = "../../../../packages/cwd-macros" }
cwd-pre-propose-base = { path = "../../../../packages/cwd-pre-propose-base" }
cwd-pre-propose-single = { path = "../../pre-propose/cwd-pre-propose-single" }
cwd-pre-propose-multiple = { path = "../../pre-propose/cwd-pre-propose-multiple" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
cwd-hooks = { path = "../../../../packages/cwd-hooks" }
cwd-proposal-hooks = { path = "../../../../packages/cwd-proposal-hooks" }
cwd-vote-hooks = { path = "../../../../packages/cwd-vote-hooks" }

voting-v1 = { package = "voting", version = "0.1.0", git = "https://github.com/DA0-DA0/dao-contracts.git", tag = "v1.0.0" }

cosmwasm-schema = { version = "1.3.0" }

[dev-dependencies]
cw-multi-test = "0.16.5"
cw-denom = { path = "../../../../packages/cw-denom" }
cw20-base = "1.1.0"
cw721-base = "0.18.0"
cw4 = "1.1.0"
cw4-group = "1.1.0"
cwd-testing = { path = "../../../../packages/cwd-testing" }
neutron-voting-registry = { path = "../../voting/neutron-voting-registry" }
neutron-vault = { path = "../../voting/neutron-vault" }
rand = "0.8.5"
