[package]
name = "credits-vault"
version = "0.2.0"
authors = ["Callum Anderson <callumanderson745@gmail.com>", "Albert Andrejev <albert.andrejev@p2p.org>"]
edition = "2021"
repository = "https://github.com/neutron-org/neutron-dao"
description = "A DAO vault contract."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.3" }
cosmwasm-std = { version = "1.1.3" }
cosmwasm-storage = { version = "1.1.3" }
cw-storage-plus = "1.0.1"
cw2 = "0.13"
cw20 = { version = "1.0.1" }
cw-utils = "1.0.1"
cw-controllers = "1.0.1"
schemars = "0.8"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cwd-macros = { path = "../../../../packages/cwd-macros" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
cw-paginate = { path = "../../../../packages/cw-paginate" }

[dev-dependencies]
cw-multi-test = "0.16.2"
anyhow = "1.0.57"
