[package]
name = "credits-vault"
version = "0.2.1"
authors = ["Callum Anderson <callumanderson745@gmail.com>", "Albert Andrejev <albert.andrejev@p2p.org>"]
edition = "2021"
repository = "https://github.com/neutron-org/neutron-dao"
description = "A DAO vault contract."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "2.0.4" }
cosmwasm-std = { version = "2.0.4" }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = { version = "2.0.0" }
cw-utils = { version = "2.0.0" }
cw-controllers = "2.0.0"
schemars = "0.8.15"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cwd-macros = { path = "../../../../packages/cwd-macros" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
cw-paginate = { path = "../../../../packages/cw-paginate" }

[dev-dependencies]
cw-multi-test = "2.0.1"
anyhow = "1.0.57"
