[package]
authors = ["Sergei Sotnikov <sergei.s@p2p.org>"]
edition = "2021"
license = "Apache-2.0"
name = "lockdrop-vault"
repository = "https://github.com/neutron/neutron-dao"
version = "0.1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
astroport = { package = "astroport", git = "https://github.com/neutron-org/neutron-tge-contracts.git", branch = "main" }
astroport-periphery = { package = "astroport-periphery", git = "https://github.com/neutron-org/neutron-tge-contracts.git", branch = "main" }
cosmwasm-schema = { version = "2.0.4" }
cosmwasm-std = { version = "2.0.4" }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
cwd-interface = { path = "../../../../packages/cwd-interface" }
cwd-macros = { path = "../../../../packages/cwd-macros" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
neutron-lockdrop-vault = { path = "../../../../packages/neutron-lockdrop-vault" }
schemars = "0.8.15"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
anyhow = "1.0.57"
cw-multi-test = "2.0.1"
