[package]
authors = [""]
description = "A DAO DAO voting module based on staked cw721 tokens."
edition = "2021"
name = "neutron-staking-vault"
license = "Apache-2.0"
repository = "https://github.com/neutron/neutron-dao"
version = "0.2.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
# backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.3.0" }
cosmwasm-std = { version = "1.3.0" }
neutron-std = { git = "https://github.com/neutron-org/neutron-std", branch = "chore/cosmwasm-std-1.5" }
cw-storage-plus = "1.1.0"
cw-utils = { version = "1.0.1" }
cw2 = "1.1.0"
cwd-interface = { path = "../../../../packages/cwd-interface" }
cwd-macros = { path = "../../../../packages/cwd-macros" }
schemars = "0.8.8"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
