[package]
authors = [""]
description = "A Neutron staking vault created for tracking natively staked asssets and generating a DAO-readable voting power out of it"
edition = "2021"
name = "neutron-staking-vault"
license = "Apache-2.0"
repository = "https://github.com/neutron/neutron-dao"
version = "0.2.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
# backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "2.2.0" }
cosmwasm-std = { version = "2.2.0" }
bech32 = "0.11.0"
cosmos-sdk-proto = { version = "0.26.1"}
neutron-std = { git = "https://github.com/neutron-org/neutron-std", version = "5.0.1-rc0" }
cw-storage-plus = "2.0.0"
cw-utils = { version = "2.0.0" }
cw2 = "2.0.0"
cwd-interface = { path = "../../../../packages/cwd-interface" }
cwd-macros = { path = "../../../../packages/cwd-macros" }
schemars = "0.8.8"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
prost = "0.12.4"
serde_json = "1.0.135"
