[package]
authors = ["Callum Anderson <callumanderson745@gmail.com>"]
description = "A DAO DAO voting module based on staked cw721 tokens."
edition = "2021"
name = "neutron-vault"
repository = "https://github.com/DA0-DA0/dao-contracts"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = {version = "1.3.0"}
cosmwasm-std = {version = "1.3.0"}
cosmwasm-storage = {version = "1.3.0"}
cw-controllers = "1.1.0"
cw-paginate = {path = "../../../../packages/cw-paginate"}
cw-storage-plus = "1.1.0"
cw-utils = {version = "1.0.1"}
cw2 = "1.1.0"
cwd-interface = {path = "../../../../packages/cwd-interface"}
cwd-macros = {path = "../../../../packages/cwd-macros"}
cwd-voting = {path = "../../../../packages/cwd-voting"}
schemars = "0.8.8"
serde = {version = "1.0.175", default-features = false, features = ["derive"]}
thiserror = {version = "1.0"}

[dev-dependencies]
anyhow = "1.0.57"
cw-multi-test = "0.16.5"
