[package]
name = "neutron-voting-registry"
version = "0.2.0"
authors = ["Callum Anderson <callumanderson745@gmail.com>"]
edition = "2021"
repository = "https://github.com/DA0-DA0/dao-contracts"
description = "A DAO DAO voting module based on staked cw721 tokens."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.3.0" }
cosmwasm-storage = { version = "1.3.0" }
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw-utils = { version = "1.0.1" }
cw-controllers = "0.13"
schemars = "0.8.8"
serde = { version = "1.0.149", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
neutron-vault = { path = "../neutron-vault" }
cwd-macros = { path = "../../../../packages/cwd-macros" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
cw-paginate = { path = "../../../../packages/cw-paginate" }

[dev-dependencies]
cosmwasm-schema = { version = "1.3.0" }
cw-multi-test = "0.13"
anyhow = "1.0.57"
