[package]
authors = ["Callum Anderson <callumanderson745@gmail.com>"]
description = "A DAO DAO voting module based on staked cw721 tokens."
edition = "2021"
name = "neutron-voting-registry"
repository = "https://github.com/DA0-DA0/dao-contracts"
version = "0.3.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "2.0.4" }
cosmwasm-std = { version = "2.0.4" }
cw-controllers = "2.0.0"
cw-paginate = { path = "../../../../packages/cw-paginate" }
cw-storage-plus = "2.0.0"
cw-utils = { version = "2.0.0" }
cw2 = "2.0.0"
cwd-interface = { path = "../../../../packages/cwd-interface" }
cwd-macros = { path = "../../../../packages/cwd-macros" }
neutron-vault = { path = "../neutron-vault" }
schemars = "0.8.15"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
anyhow = "1.0.57"
cw-multi-test = "2.0.1"
