[package]
name = "vesting-lp-vault"
version = "0.1.0"
authors = ["Sergei Sotnikov <sergei.s@p2p.org>", "Murad Karammaev <karammaev.murad@p2p.org>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/neutron/neutron-dao"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.3.0" }
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
schemars = "0.8.8"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cwd-macros = { path = "../../../../packages/cwd-macros" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
neutron-vesting-lp-vault = { path = "../../../../packages/neutron-vesting-lp-vault" }
neutron-oracle = { path = "../../../../packages/neutron-oracle" }
vesting-base = { git = "https://github.com/neutron-org/neutron-tge-contracts", branch = "main" }
vesting-lp = { git = "https://github.com/neutron-org/neutron-tge-contracts", branch = "main" }

[dev-dependencies]
cosmwasm-schema = { version = "1.3.0" }
cw-multi-test = "0.16.5"
anyhow = "1.0.57"
