[package]
name = "vesting-lp-vault"
version = "0.1.0"
authors = ["Sergei Sotnikov <sergei.s@p2p.org>", "Murad Karammaev <karammaev.murad@p2p.org>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/neutron/neutron-dao"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = "0.13"
cw2 = "0.13"
schemars = "0.8"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cwd-macros = { path = "../../../../packages/cwd-macros" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
neutron-vesting-lp-vault = { path = "../../../../packages/neutron-vesting-lp-vault" }
neutron-oracle = { path = "../../../../packages/neutron-voting-power" }
vesting-base = { git = "https://github.com/neutron-org/neutron-tge-contracts", rev = "e306308dd23d567399c15d899f295a910ede945b" }
vesting-lp = { git = "https://github.com/neutron-org/neutron-tge-contracts", rev = "e306308dd23d567399c15d899f295a910ede945b" }
astroport = { package="astroport", git = "https://github.com/neutron-org/neutron-tge-contracts.git", rev = "e306308dd23d567399c15d899f295a910ede945b" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = "0.13"
anyhow = "1.0.57"
astroport-xastro-token = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v2.8.0" }
astroport-pair-concentrated = { git = "https://github.com/astroport-fi/astroport-core.git", tag = "v2.8.0" }
astroport-original = { package = "astroport", git = "https://github.com/astroport-fi/astroport-core.git", tag = "v2.8.0" }