[package]
name = "vesting-lp-vault"
version = "0.1.1"
authors = ["Sergei Sotnikov <sergei.s@p2p.org>", "Murad Karammaev <karammaev.murad@p2p.org>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/neutron/neutron-dao"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "2.0.4" }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.15"
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
cwd-macros = { path = "../../../../packages/cwd-macros" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
neutron-vesting-lp-vault = { path = "../../../../packages/neutron-vesting-lp-vault" }
neutron-oracle = { path = "../../../../packages/neutron-oracle" }
vesting-base = { git = "https://github.com/neutron-org/neutron-tge-contracts", branch = "main" }
vesting-lp = { git = "https://github.com/neutron-org/neutron-tge-contracts", branch = "main" }

[dev-dependencies]
cosmwasm-schema = { version = "2.0.4" }
cw-multi-test = "2.0.1"
anyhow = "1.0.57"
