[package]
name = "cwd-security-subdao-pre-propose"
version = "0.2.2"
authors = ["Pavel Kalinin <pavel.kalinin@p2p.org>"]
edition = "2021"
repository = "https://github.com/DA0-DA0/dao-contracts"
description = "A DAO DAO pre-propose module for cwd-proposal-single for native and cw20 deposits."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "2.0.4" }
cw2 = "2.0.0"
cw-storage-plus = "2.0.0"
cw-utils = { version = "2.0.0" }
serde = { version = "1.0.175", default-features = false, features = ["derive"] }
cwd-pre-propose-base = { version = "*", path = "../../../../packages/cwd-pre-propose-base" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
neutron-sdk = "0.10.0"
neutron-subdao-core = { path = "../../../../packages/neutron-subdao-core" }
neutron-subdao-timelock-single = { path = "../../../../packages/neutron-subdao-timelock-single" }
neutron-subdao-proposal-single = { path = "../../../../packages/neutron-subdao-proposal-single" }
neutron-security-subdao-pre-propose = { path = "../../../../packages/neutron-security-subdao-pre-propose" }
schemars = "0.8.15"
cwd-interface = { path = "../../../../packages/cwd-interface" }

[dev-dependencies]
cosmwasm-schema = "2.0.4"
cw-utils = { version = "2.0.0" }
cw20 = "2.0.0"
cwd-voting = { path = "../../../../packages/cwd-voting" }
cw-denom = { path = "../../../../packages/cw-denom" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
