[package]
name = "cwd-subdao-pre-propose-single-no-timelock"
version = "0.2.0"
authors = ["Pavel Kalinin <pavel.kalinin@p2p.org>"]
edition = "2021"
repository = "https://github.com/DA0-DA0/dao-contracts"
description = "A DAO DAO pre-propose module for cwd-proposal-single for native and cw20 deposits."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0"
cw2 = "0.13.2"
cw-storage-plus = "0.13"
cw-utils = "0.13"
serde = { version = "1.0.147", default-features = false, features = ["derive"] }
cwd-pre-propose-base = { version = "*", path = "../../../../packages/cwd-pre-propose-base" }
cwd-voting = { path = "../../../../packages/cwd-voting" }
neutron-sdk = "0.5.0"
neutron-subdao-core = { path = "../../../../packages/neutron-subdao-core" }
neutron-subdao-timelock-single = { path = "../../../../packages/neutron-subdao-timelock-single" }
neutron-subdao-proposal-single = { path = "../../../../packages/neutron-subdao-proposal-single" }
neutron-subdao-pre-propose-single-no-timelock = { path = "../../../../packages/neutron-subdao-pre-propose-single-no-timelock" }
schemars = "0.8.8"
cwd-interface = { path = "../../../../packages/cwd-interface" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-utils = "0.13.2"
cw20 = "0.13.2"
cwd-voting = { path = "../../../../packages/cwd-voting" }
cw-denom = { path = "../../../../packages/cw-denom" }
cwd-interface = { path = "../../../../packages/cwd-interface" }
